[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Vadzim Dambrouski <pftbest@gmail.com>"
]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for MSP430 microcontrollers"
documentation = "https://docs.rs/msp430-rt"
keywords = ["msp430", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "msp430-rt"
repository = "https://github.com/pftbest/msp430-rt"
version = "0.1.1"

[dependencies]
msp430 = "0.1.0"
r0 = "0.2.2"

[features]
# provides a panic_fmt implementation that goes into infinite loop
abort-on-panic = []

[build-dependencies]
rustc_version = "0.2.1"
chrono = "0.4.0"
