[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Vadzim Dambrouski <pftbest@gmail.com>"
]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for MSP430 microcontrollers"
documentation = "https://docs.rs/msp430-rt"
edition = "2018"
keywords = ["msp430", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "msp430-rt"
repository = "https://github.com/pftbest/msp430-rt"
version = "0.2.0"

[dependencies]
msp430 = "0.2.0"
r0 = "0.2.2"

[dependencies.msp430-rt-macros]
version = "0.2.0"
path = "macros"

[features]
device = ["msp430-rt-macros/device"]

[package.metadata.docs.rs]
features = ["device"]

[workspace]
members = ["macros"]
