[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Vadzim Dambrouski <pftbest@gmail.com>",
    "William D. Jones <thor0505@comcast.net>"
]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for MSP430 microcontrollers"
documentation = "https://docs.rs/msp430-rt"
edition = "2018"
keywords = ["msp430", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "msp430-rt"
repository = "https://github.com/rust-embedded/msp430-rt"
version = "0.2.4"

[dependencies]
msp430 = "0.2.0"
r0 = "1.0.0"

[dependencies.msp430-rt-macros]
version = "0.2.4"
path = "macros"

[features]
device = ["msp430-rt-macros/device"]

[package.metadata.docs.rs]
features = ["device"]

[workspace]
members = ["macros"]
