[package]
name = "msp430-rt-macros"
version = "0.2.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
proc-macro2 = "0.4.23"

[dependencies.rand]
default-features = false
version = "0.6.0"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "0.15.20"

[features]
device = []