[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "Attributes re-exported in `msp430-rt`"
documentation = "https://docs.rs/msp430-rt"
keywords = ["msp430", "runtime", "startup"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded/msp430-rt"
name = "msp430-rt-macros"
version = "0.2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
proc-macro2 = "0.4.23"

[dependencies.rand]
default-features = false
version = "0.6.0"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "0.15.20"

[features]
device = []
