[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "Attributes re-exported in `msp430-rt`"
documentation = "https://docs.rs/msp430-rt"
keywords = ["msp430", "runtime", "startup"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-embedded/msp430-rt"
name = "msp430-rt-macros"
version = "0.3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.14"
proc-macro2 = "1.0.36"
rand_xoshiro = "0.6.0"

[dependencies.rand]
default-features = false
version = "0.8.4"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1.0.85"

[dev-dependencies]
msp430 = "0.3.0"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
trybuild = "1"

[features]
device = []

[[test]]
name = "compiletest"
